--- a/review/templates/review/newselfcheck.html
+++ b/review/templates/review/newselfcheck.html
@@ -78,18 +78,22 @@
 		{% endif %}
 		<input type="hidden" name="initvalue" value="{{ initvalue }}">
 		<input type="hidden" name="navbarinfo" value="{{ navbarinfo }}">
+		<input type="hidden" name="permissioninfo" value="{{ permissioninfo }}">
 	</form>
 </div>
 <script type="text/javascript">
 	function grpclick(clickitem) {
 		var grplink = $(clickitem)[0];
 		var hiditem = $('#group-'+grplink.id);
+		var collapse = $('#collapse'+grplink.id.substr(6))
 		var curstatus = 1 - parseInt(hiditem.val());
 		hiditem.val(curstatus);
 		if (curstatus == 0) {
 			grplink.text="無効";
+			collapse.collapse('hide');
 		} else {
 			grplink.text="有効";
+			collapse.collapse('show');
 		}
 	}
 	function showdetail(clickitem) {
