--- a/review/templates/review/newpeercheck.html
+++ b/review/templates/review/newpeercheck.html
@@ -161,13 +161,16 @@
 				</div>
 			</div>
 		{% endfor %}
-		<div class="form-group">
-			<div class="text-center">
-				<button type="submit" class="btn btn-primary">OK</button>
+		{% if permission.save %}
+			<div class="form-group">
+				<div class="text-center">
+					<button type="submit" class="btn btn-primary">OK</button>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 		<input type="hidden" name="initvalue" value="{{ initvalue }}">
 		<input type="hidden" name="navbarinfo" value="{{ navbarinfo }}">
+		<input type="hidden" name="permissioninfo" value="{{ permissioninfo }}">
 	</form>
 </div>
 <script type="text/javascript">
@@ -183,12 +186,15 @@
 	function grpclick(clickitem) {
 		var grplink = $(clickitem)[0];
 		var hiditem = $('#group-'+grplink.id);
+		var collapse = $('#collapse'+grplink.id.substr(6))
 		var curstatus = 1 - parseInt(hiditem.val());
 		hiditem.val(curstatus);
 		if (curstatus == 0) {
 			grplink.text="無効";
+			collapse.collapse('hide');
 		} else {
 			grplink.text="有効";
+			collapse.collapse('show');
 		}
 	}
 	function dynclick(clickitem) {
