--- a/review/templates/review/modifychklst.html
+++ b/review/templates/review/modifychklst.html
@@ -33,6 +33,14 @@ Modify CheckList
 						{% endif %}
 						<label for="id_selfcheck">SelfCheck</label>
 					</div>
+					<div class="switch">
+						{% if form.valid %}
+							<input type="checkbox" id="id_valid" name="valid" checked {% if form.disable %}disabled{% endif %}/>
+						{% else %}
+							<input type="checkbox" id="id_valid" name="valid" {% if form.disable %}disabled{% endif %}/>
+						{% endif %}
+						<label for="id_valid">Valid</label>
+					</div>
 					<button type="submit" class="btn btn-primary">Modify</button>
 					<input type="hidden" name="navbarinfo" value="{{ navbarinfo }}" />
 					<input type="hidden" name="initial" value="{{ initial }}" />
